--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "THQ Cyber Division",
-    "short_name": "THQ Cyber",
+    "name": "THQ Cyber Division Unincorporated",
+    "short_name": "THQ Cyber Unincorporated",
     "description": "Empowering businesses through innovative IT solutions.",
     "start_url": "/index.html",
     "display": "standalone",
