--- a/manifest.json
+++ b/manifest.json
@@ -56,7 +56,7 @@
         },
         {
             "platform": "web",
-            "url": "/booking.html"
+            "url": "/bookings.html"
         },
 
     ]
